# CTRP-Pharmacoset_Snakemake

./: .gitignore  README  Snakefile  pyproject.toml
config/: pipeline.yaml
workflow/config/: pipeline.yaml
workflow/profiles/gcp/: config.yaml
workflow/rules/: download.smk  metadata.smk  treatmentResponse.smk
workflow/scripts/: template.R
workflow/scripts/metadata/: annotate_sampleMetadata.R  annotate_treatmentMetadata.R  preprocess_Metadata.R  preprocess_treatmentMetadata.R
workflow/scripts/treatmentResponse/: build_treatmentResponseExperiment.R
